--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Jahid.</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -81,32 +81,32 @@
             <ul>
               <li class = "text">
                 <span>Name: </span>
-                <span>Steve Williams</span>
+                <span>Md. Zahidul Islam</span>
               </li>
               <li class = "text">
                 <span>Date of Birth: </span>
-                <span>January 01, 1980</span>
+                <span>December 05, 2001</span>
               </li>
               <li class = "text">
                 <span>Address: </span>
-                <span>New York CA 829 USA</span>
+                <span>Gazipur, Dhaka, bangladesh</span>
               </li>
               <li class = "text">
                 <span>Email: </span>
-                <span>stevewill@gmail.com</span>
+                <span>jahidhasan.r150@gmail.com</span>
               </li>
               <li class = "text">
                 <span>Zip code: </span>
-                <span>758844</span>
+                <span>1751</span>
               </li>
               <li class = "text">
                 <span>Phone: </span>
-                <span>+4854 384 0000</span>
+                <span>+880 1773-393608</span>
               </li>
             </ul>
           </div>
 
-          <h3>120 <span>Project complete</span></h3>
+          <h3>10 <span>Project complete</span></h3>
           <button type = "button" class = "btn">download cv</button>
         </div>
       </div>
@@ -124,7 +124,7 @@
           <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium quia, magnam et deleniti similique voluptates nulla iusto temporibus veritatis asperiores consectetur quidem doloremque id possimus!</p>
           <div class = "social-links">
             <a href = "#"><i class = "fab fa-twitter"></i></a>
-            <a href = "#"><i class = "fab fa-facebook"></i></a>
+            <a href = "https://www.facebook.com/hJahidHasan.jrC/"><i class = "fab fa-facebook"></i></a>
             <a href = "#"><i class = "fab fa-instagram"></i></a>
           </div>
         </div>
@@ -132,19 +132,19 @@
         <div class = "col">
           <h3 class = "footer-title">links</h3>
           <div class = "footer-links">
-            <a href = "#" class = "text">
+            <a href = "index.html" class = "text">
               <i class = "fas fa-long-arrow-alt-right"></i>
               home
             </a>
-            <a href = "#" class = "text">
+            <a href = "about.html" class = "text">
               <i class = "fas fa-long-arrow-alt-right"></i>
               about
             </a>
-            <a href = "#" class = "text">
+            <a href = "services.html" class = "text">
               <i class = "fas fa-long-arrow-alt-right"></i>
               services
             </a>
-            <a href = "#" class = "text">
+            <a href = "contact.html" class = "text">
               <i class = "fas fa-long-arrow-alt-right"></i>
               contact
             </a>
