--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Jahid.</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -81,7 +81,7 @@
             <span><i class = "fas fa-envelope-open"></i></span>
             <h3>
               <span class = "text">mail me</span> <br>
-              steve@gmail.com
+              Jahidhasan.r150@gmail.com
             </h3>
           </div>
 
@@ -89,12 +89,12 @@
             <span><i class = "fas fa-phone-square-alt"></i></span>
             <h3>
               <span class = "text">call me</span> <br>
-              + 2382 383 0002
+              +880 1773-393608
             </h3>
           </div>
 
           <div class = "contact-social-links">
-            <a href = "#">
+            <a href = "https://www.facebook.com/hJahidHasan.jrC/">
               <i class = "fab fa-facebook-f"></i>
             </a>
             <a href = "#">
@@ -103,7 +103,7 @@
             <a href = "#">
               <i class = "fab fa-youtube"></i>
             </a>
-            <a href = "#">
+            <a href = "https://github.com/JahidHasanCO">
               <i class = "fab fa-github"></i>
             </a>
           </div>
