--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
+    <title>Jahid Hasan</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- utility css file -->
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Jahid.</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -68,8 +68,8 @@
       <div class = "row">
         <div class = "row-left">
           <h3>hello!</h3>
-          <h1>i'm <span>steve williams</span></h1>
-          <h2>a freelance web designer</h2>
+          <h1>i'm <span> Jahid Hasan</span></h1>
+          <h2>a freelance Android Developer</h2>
           <div class = "home-pg-btn">
             <button type = "button" class = "btn">hire me</button>
             <button type = "button" class = "btn">my works</button>
@@ -151,27 +151,27 @@
             <span>
               <i class = "fas fa-map-marker-alt"></i>
             </span>
-            <span class = "text">110 Baker Street St. Mountain View, New York, USA</span>
+            <span class = "text">Ansar Academy Shafipur, Dhaka, Bangladesh</span>
           </div>
 
           <div>
             <span>
               <i class = "fas fa-phone"></i>
             </span>
-            <span class = "text">+ 8232 883 0000</span>
+            <span class = "text">+880 1773-393608</span>
           </div>
 
           <div>
             <span>
               <i class = "fas fa-envelope"></i>
             </span>
-            <span class = "text">info@domain.com</span>
+            <span class = "text">jahidhasan.r150@gmail.com</span>
           </div>
         </div>
       </div>
 
       <div class = "footer-text">
-        <p class = "text">Copyright &copy; 2022 All rights reserved | Awesome Template Design</p>
+        <p class = "text">Copyright &copy; 2021 All rights reserved | Jahid Hasan</p>
       </div>
     </footer>
     <!-- end of footer -->
