--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Jahid.</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -67,54 +67,23 @@
       <div class = "title">
         <h2>projects</h2>
         <div>
-          <h2>our projects</h2>
+          <h2>My Projects</h2>
         </div>
       </div>
 
       <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum perspiciatis accusantium eligendi aliquam excepturi dolores obcaecati eveniet inventore aut? Voluptas assumenda obcaecati dignissimos animi incidunt?</p>
 
       <div class = "row">
+       
         <div class = "item">
           <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
+            <a href = "https://github.com/JahidHasanCO/BuyNow-App/">Buy Now Eccomers App</a>
+            <h3>Android App</h3>
           </div>
         </div>
+        
 
-        <div class = "item">
-          <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
-          </div>
-        </div>
 
-        <div class = "item">
-          <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
-          </div>
-        </div>
-
-        <div class = "item">
-          <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
-          </div>
-        </div>
-
-        <div class = "item">
-          <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
-          </div>
-        </div>
-
-        <div class = "item">
-          <div class = "item-overlay">
-            <a href = "#">branding & illustration design</a>
-            <h3>web design</h3>
-          </div>
-        </div>
       </div>
     </section>
     <!-- end of projects page -->
