--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
     <nav class = "navbar">
       <div class = "container">
         <div class = "brand-and-toggler">
-          <a href = "index.html" class = "navbar-brand">steve</a>
+          <a href = "index.html" class = "navbar-brand">Jahid.</a>
           <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
             <span>
               <i class = "fas fa-bars"></i>
@@ -77,7 +77,7 @@
       <div class = "row">
         <div class = "item">
           <div class = "item-text">
-            <span>Photoshop</span>
+            <span>Python</span>
             <span class = "w-90">90%</span>
           </div>
           <div class = "progress">
@@ -87,7 +87,7 @@
 
         <div class = "item">
           <div class = "item-text">
-            <span>jQuery</span>
+            <span>C</span>
             <span class = "w-75">75%</span>
           </div>
           <div class = "progress">
@@ -97,7 +97,7 @@
 
         <div class = "item">
           <div class = "item-text">
-            <span>HTML5</span>
+            <span>C++</span>
             <span class = "w-85">85%</span>
           </div>
           <div class = "progress">
@@ -107,17 +107,17 @@
 
         <div class = "item">
           <div class = "item-text">
-            <span>CSS3</span>
-            <span class = "w-80">80%</span>
+            <span>Android Development</span>
+            <span class = "w-90">97%</span>
           </div>
           <div class = "progress">
-            <div class = "progress-bar w-80"></div>
+            <div class = "progress-bar w-90"></div>
           </div>
         </div>
 
         <div class = "item">
           <div class = "item-text">
-            <span>Wordpress</span>
+            <span>Machine Learning</span>
             <span class = "w-60">60%</span>
           </div>
           <div class = "progress">
@@ -127,7 +127,7 @@
 
         <div class = "item">
           <div class = "item-text">
-            <span>PHP</span>
+            <span>Problem Sloving</span>
             <span class = "w-68">68%</span>
           </div>
           <div class = "progress">
