--- a/single-post.html
+++ b/single-post.html
@@ -30,7 +30,8 @@
 			<div class="vlt-navbar-background"></div>
 			<div class="vlt-navbar-inner">
 				<div class="vlt-navbar-inner--left">
-					<!--Logo--><a class="vlt-navbar-logo" href="index.html"><img src="assets/img/root/logo.svg" alt="Gilber"></a>
+					<!-- <a class="vlt-navbar-logo" href="index.html"><img src="assets/img/root/logo.svg" alt="Gilber"></a> -->
+					<h3 class="vlt-navbar-logo"><a href="#Home">Jahid</a><span class="has-accent-color">.</span></h3>
 				</div>
 				<div class="vlt-navbar-inner--center">
 					<div class="container">
