--- a/buy_now_page.html
+++ b/buy_now_page.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
-	<link rel="icon" type="image/svg" href="assets/img/root/favicon.svg">
+	<link rel="icon" type="image/svg" href="assets/img/root/logo.svg">
 	<!--Framework-->
 	<link rel="stylesheet" href="assets/css/framework/bootstrap.min.css">
 	<!--Fonts-->
@@ -47,9 +47,9 @@
 								</li>
 								<li data-menuanchor="Education"><a href="index.html#Education">Education</a>
 								</li>
-								<li data-menuanchor="Testimonials"><a href="index.html#Testimonials">Testimonials</a>
+								<li data-menuanchor="Experience"><a href="index.html#Experience">Experience</a>
 								</li>
-								<li data-menuanchor="Partners"><a href="index.html#Partners">Partners</a>
+								<li data-menuanchor="Service"><a href="index.html#Service">Service</a>
 								</li>
 								<li data-menuanchor="Blog"><a href="index.html#Blog">Blog</a>
 								</li>
@@ -99,9 +99,9 @@
 				</li>
 				<li data-menuanchor="Education"><a href="index.html#Education">Education</a>
 				</li>
-				<li data-menuanchor="Testimonials"><a href="index.html#Testimonials">Testimonials</a>
+				<li data-menuanchor="Experience"><a href="index.html#Experience">Experience</a>
 				</li>
-				<li data-menuanchor="Partners"><a href="index.html#Partners">Partners</a>
+				<li data-menuanchor="Service"><a href="index.html#Service">Service</a>
 				</li>
 				<li data-menuanchor="Blog"><a href="index.html#Blog">Blog</a>
 				</li>
