--- a/index.html
+++ b/index.html
@@ -352,9 +352,7 @@
 																University</h5>
 														</div>
 														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Which firmament dominion
-																first rule and tree. The seas he i were cattle Under
-																living. It may beast every forth place.</p>
+															<p class="vlt-timeline-item__text">Daffodil International University is a private university located in Dhaka, Bangladesh.</p>
 														</div>
 													</div>
 												</div>
@@ -368,9 +366,7 @@
 																Jabber Ansar VDP School & College</h5>
 														</div>
 														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Rule bearing whales.
-																Created gathering blessed, sixth likeness male. Over
-																were which you'll so be make moveth made saw above.</p>
+															<p class="vlt-timeline-item__text">Ansar-VDP Academy is a training institute. It is located at Shafipur, Gazipur District.</p>
 														</div>
 													</div>
 												</div>
@@ -384,9 +380,7 @@
 																Jabber Ansar VDP School & College</h5>
 														</div>
 														<div class="col-xl-4">
-															<p class="vlt-timeline-item__text">Firmament itself rule
-																their evening, which moved very night so great them
-																cattle bearing and gathered forth had whose bearing.</p>
+															<p class="vlt-timeline-item__text">Ansar-VDP Academy is a training institute. It is located at Shafipur, Gazipur District.</p>
 														</div>
 													</div>
 												</div>
@@ -442,8 +436,8 @@
 							<div class="vlt-animated-block" data-animation-name="fadeInUpSm"
 								style="animation-delay:.1s; animation-duration:700ms;">
 								<ul class="vlt-partners">
-									<li><img src="assets/img/root/logo_my.png" alt="" loading="lazy"></li>
-									<li><img src="assets/img/root/favicon.svg" alt="" loading="lazy"></li>
+									<li><img src="assets/img/root/android.png" height="100" width="150" alt="Android Development" loading="lazy"></li>
+									<li><img src="assets/img/root/machine learning.png" height="100" width="130" alt="Machine Learning" loading="lazy"></li>
 								</ul>
 							</div>
 						</div>
